lib/Termbox2.rakumod


sub tb-set-cursor ( int32 $cx, int32 $cy --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_set_cursor') {*}

sub tb-hide-cursor ( --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_hide_cursor') {*}

sub tb-set-cell ( int32 $x, int32 $y, uint32 $ch, uint16 $fg, uint16 $bg --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_set_cell') {*}

# For rendering grapheme clusters (e.g. combining diacritical marks); $ch
# holds $nch codepoints that are rendered together in the one cell at (x, y).
sub tb-set-cell-ex ( int32 $x, int32 $y, CArray[uint32] $ch, size_t $nch, uint16 $fg, uint16 $bg --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_set_cell_ex') {*}

# Shortcut for appending one codepoint to the cell at (x, y), as set by a
# prior tb-set-cell/tb-set-cell-ex call.
sub tb-extend-cell ( int32 $x, int32 $y, uint32 $ch --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_extend_cell') {*}

# $cell must be a defined Pointer (e.g. `my Pointer $cell .= new`) before the
# call; on success it points into the internal cell buffer at (x, y) — use
# `nativecast(Cell, $cell)` to access its fields. That memory may become
# invalid after subsequent calls into the library.
sub tb-get-cell ( int32 $x, int32 $y, int32 $back, Pointer $cell is rw --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_get_cell') {*}

sub tb-print ( int32 $x, int32 $y, uint16 $fg, uint16 $bg, Str $str is encoded('utf8') --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_print') {*}

# As tb-print, but also reports the printed width (in cells) via $out-w.
sub tb-print-ex ( int32 $x, int32 $y, uint16 $fg, uint16 $bg, size_t $out-w is rw, Str $str is encoded('utf8') --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_print_ex') {*}

# Send raw bytes straight to the terminal, bypassing the cell buffer.
# Note on $nbuf: because of is encoded('utf8'), $buf is encoded to UTF-8
# bytes before the native call. Pass the UTF-8 *byte* count (e.g.
# $buf.encode('utf8').bytes), NOT the Raku Str character count ($buf.chars),
# to avoid incorrect length for multi-byte characters.
sub tb-send ( Str $buf is encoded('utf8'), size_t $nbuf --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_send') {*}

sub tb-set-input-mode ( int32 $mode --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_set_input_mode') {*}

sub tb-set-output-mode ( int32 $mode --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_set_output_mode') {*}

sub tb-peek-event ( Event $event is rw, int32 $timeout-ms --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_peek_event') {*}

sub tb-poll-event ( Event $event is rw --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_poll_event') {*}

# Termbox's internal fds, for integrating into an external poll(2)/select(2)
# loop. tb-poll-event/tb-peek-event must still be called once either becomes
# readable.
sub tb-get-fds ( int32 $ttyfd is rw, int32 $resizefd is rw --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_get_fds') {*}

sub tb-last-errno ( --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_last_errno') {*}

sub tb-strerror ( int32 $err --> Str )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_strerror') {*}

sub tb-has-truecolor ( --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_has_truecolor') {*}

sub tb-has-egc ( --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_has_egc') {*}

sub tb-attr-width ( --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_attr_width') {*}

sub tb-version ( --> Str )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_version') {*}

sub tb-iswprint ( uint32 $ch --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_iswprint') {*}

sub tb-wcwidth ( uint32 $ch --> int32 )
    is native(TERMBOX2) is export(:DEFAULT, :subs) is symbol('tb_wcwidth') {*}

=begin pod

=head1 SOURCE

Source code, issues, and pull requests: L<https://github.com/arnesom/raku-termbox2>

=head1 AUTHOR

Arne Sommer <arne@sommer.pm>

Parts of this distribution were developed with AI assistance (Claude and Qwen).

=head1 COPYRIGHT AND LICENSE

Copyright (c) 2026 Arne Sommer

This Raku binding is licensed under the Artistic License 2.0, the same
license as Raku itself. See the C<LICENSE> file for the full license text.

The vendored C library C<resources/termbox2.h> (and the C<termbox2-impl.c>
wrapper compiled from it) is termbox2, MIT licensed. See the header for the
full license text.

=end pod
